// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricCard > should combine metric value and comparison 1`] = `
<div>
  <div
    class="flex flex-col relative overflow-hidden h-auto text-foreground box-border bg-content1 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium transition-transform-background motion-reduce:transition-none rounded-2xl p-3"
    tabindex="-1"
  >
    <div
      class="flex p-3 z-10 w-full justify-start items-center shrink-0 overflow-inherit color-inherit subpixel-antialiased rounded-t-large"
    >
      <h4
        class="scroll-m-20 font-medium text-default-900 text-xl tracking-tight"
      >
        COE Premiums
      </h4>
    </div>
    <div
      class="relative flex w-full p-3 flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased"
    >
      <div
        class="font-semibold tabular-nums text-4xl text-primary"
      >
        <span>
          0
        </span>
      </div>
    </div>
    <div
      class="p-3 h-auto flex w-full items-center overflow-hidden color-inherit subpixel-antialiased rounded-b-large"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-success/20 text-success-700 dark:text-success"
        >
          <svg
            class="lucide lucide-arrow-up-right max-h-[80%] size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <span
            class="flex-1 text-inherit font-normal px-2 pl-1"
          >
            11.1%
          </span>
        </div>
        <span
          class="text-muted-foreground text-sm"
        >
          vs last month
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricCard > should render with hero variant 1`] = `
<div>
  <div
    class="flex flex-col relative overflow-hidden h-auto text-foreground box-border bg-content1 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-transform-background motion-reduce:transition-none rounded-3xl shadow-md p-6 border-l-4 border-primary"
    tabindex="-1"
  >
    <div
      class="flex p-3 z-10 w-full justify-start items-center shrink-0 overflow-inherit color-inherit subpixel-antialiased rounded-t-large"
    >
      <h4
        class="scroll-m-20 font-medium text-default-900 text-xl tracking-tight"
      >
        Total Registrations
      </h4>
    </div>
    <div
      class="relative flex w-full p-3 flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased"
    >
      <div
        class="font-semibold tabular-nums text-5xl text-primary"
      >
        <span>
          0
        </span>
      </div>
    </div>
    <div
      class="p-3 h-auto flex w-full items-center overflow-hidden color-inherit subpixel-antialiased rounded-b-large"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-success/20 text-success-700 dark:text-success"
        >
          <svg
            class="lucide lucide-arrow-up-right max-h-[80%] size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <span
            class="flex-1 text-inherit font-normal px-2 pl-1"
          >
            11.1%
          </span>
        </div>
        <span
          class="text-muted-foreground text-sm"
        >
          vs last month
        </span>
      </div>
    </div>
  </div>
</div>
`;
